// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IncentiveLevelSlip /> renders correctly 1`] = `
<div
  className="sc-aXZVg hwQPcm"
>
  <div
    className="sc-gEvEer HhquE"
  >
    <div
      className="sc-eqUAAy bZGZej"
    >
      <h2
        className="heading__StyledHeading-sc-1sovo83-0 kheylK"
        size="MEDIUM"
      >
        Incentive Warning
      </h2>
    </div>
    <div
      className="sc-eqUAAy bZGZej"
    >
      Date and time: 
      <span
        className="sc-fqkvVR oHKyH"
      >
        1 January 2019, 12:00 am
      </span>
    </div>
  </div>
  <div
    className="sc-gEvEer HhquE"
  >
    <div
      className="sc-eqUAAy bZGZej"
    >
      Name: 
      <span
        className="sc-fqkvVR kjOclf"
      >
        An Offender
      </span>
    </div>
    <div
      className="sc-eqUAAy bZGZej"
    >
      Number: 
      <span
        className="sc-fqkvVR kjOclf"
      >
        ABC123
      </span>
    </div>
    <div
      className="sc-eqUAAy bZGZej"
    >
      Location: 
      <span
        className="sc-fqkvVR kjOclf"
      >
        LEI-123
      </span>
    </div>
  </div>
  <div
    className="sc-gEvEer HhquE"
  >
    <div
      className="sc-eqUAAy bZGZej"
    >
      Reason:
      <span
        className="sc-fqkvVR kjOclf"
      >
        Refused: Did not want to work
      </span>
    </div>
  </div>
  <div
    className="sc-gEvEer cNryjr"
  >
    <div
      className="sc-eqUAAy bZGZej"
    >
      Raised by: 
      <span
        className="sc-fqkvVR oHKyH"
      >
        A. Officer
      </span>
    </div>
    <div
      className="sc-eqUAAy bZGZej"
    >
      Date: 
      <span
        className="sc-fqkvVR oHKyH"
      >
        1 January 2019
      </span>
    </div>
  </div>
  <div
    className="sc-gEvEer cNryjr"
  >
    <div
      className="sc-eqUAAy bZGZej"
    >
      Issued by: 
      <span
        className="sc-fqkvVR oHKyH"
      />
    </div>
    <div
      className="sc-eqUAAy bZGZej"
    >
      Date: 
      <span
        className="sc-fqkvVR oHKyH"
      >
        1 January 2019
      </span>
    </div>
  </div>
</div>
`;

exports[`<IncentiveLevelSlip /> renders with amendments 1`] = `
<div
  className="sc-aXZVg hwQPcm"
>
  <div
    className="sc-gEvEer HhquE"
  >
    <div
      className="sc-eqUAAy bZGZej"
    >
      <h2
        className="heading__StyledHeading-sc-1sovo83-0 kheylK"
        size="MEDIUM"
      >
        Incentive Warning
      </h2>
    </div>
    <div
      className="sc-eqUAAy bZGZej"
    >
      Date and time: 
      <span
        className="sc-fqkvVR oHKyH"
      >
        1 January 2019, 12:00 am
      </span>
    </div>
  </div>
  <div
    className="sc-gEvEer HhquE"
  >
    <div
      className="sc-eqUAAy bZGZej"
    >
      Name: 
      <span
        className="sc-fqkvVR kjOclf"
      >
        An Offender
      </span>
    </div>
    <div
      className="sc-eqUAAy bZGZej"
    >
      Number: 
      <span
        className="sc-fqkvVR kjOclf"
      >
        ABC123
      </span>
    </div>
    <div
      className="sc-eqUAAy bZGZej"
    >
      Location: 
      <span
        className="sc-fqkvVR kjOclf"
      >
        LEI-123
      </span>
    </div>
  </div>
  <div
    className="sc-gEvEer HhquE"
  >
    <div
      className="sc-eqUAAy bZGZej"
    >
      Reason:
      <span
        className="sc-fqkvVR kjOclf"
      >
        Refused: Did not want to work
      </span>
      <div
        className="sc-dcJsrY dGFGcL"
      >
        Amendment: 
        <span
          className="sc-fqkvVR kjOclf"
        >
          Rescinded
        </span>
        <div>
          1 January 2019, 2:17 pm
        </div>
        <div>
          A. Amendment
        </div>
      </div>
      <div
        className="sc-dcJsrY dGFGcL"
      >
        Amendment: 
        <span
          className="sc-fqkvVR kjOclf"
        >
          Updated
        </span>
        <div>
          1 January 2019, 3:17 pm
        </div>
        <div>
          A. Author
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-gEvEer cNryjr"
  >
    <div
      className="sc-eqUAAy bZGZej"
    >
      Raised by: 
      <span
        className="sc-fqkvVR oHKyH"
      >
        A. Officer
      </span>
    </div>
    <div
      className="sc-eqUAAy bZGZej"
    >
      Date: 
      <span
        className="sc-fqkvVR oHKyH"
      >
        1 January 2019
      </span>
    </div>
  </div>
  <div
    className="sc-gEvEer cNryjr"
  >
    <div
      className="sc-eqUAAy bZGZej"
    >
      Issued by: 
      <span
        className="sc-fqkvVR oHKyH"
      />
    </div>
    <div
      className="sc-eqUAAy bZGZej"
    >
      Date: 
      <span
        className="sc-fqkvVR oHKyH"
      >
        1 January 2019
      </span>
    </div>
  </div>
</div>
`;

exports[`<IncentiveLevelSlip /> renders with an activity or area 1`] = `
<div
  className="sc-aXZVg hwQPcm"
>
  <div
    className="sc-gEvEer HhquE"
  >
    <div
      className="sc-eqUAAy bZGZej"
    >
      <h2
        className="heading__StyledHeading-sc-1sovo83-0 kheylK"
        size="MEDIUM"
      >
        Incentive Warning
      </h2>
    </div>
    <div
      className="sc-eqUAAy bZGZej"
    >
      Date and time: 
      <span
        className="sc-fqkvVR oHKyH"
      >
        1 January 2019, 12:00 am
      </span>
    </div>
  </div>
  <div
    className="sc-gEvEer HhquE"
  >
    <div
      className="sc-eqUAAy bZGZej"
    >
      Name: 
      <span
        className="sc-fqkvVR kjOclf"
      >
        An Offender
      </span>
    </div>
    <div
      className="sc-eqUAAy bZGZej"
    >
      Number: 
      <span
        className="sc-fqkvVR kjOclf"
      >
        ABC123
      </span>
    </div>
    <div
      className="sc-eqUAAy bZGZej"
    >
      Location: 
      <span
        className="sc-fqkvVR kjOclf"
      >
        LEI-123
      </span>
    </div>
    <div
      className="sc-eqUAAy bZGZej"
    >
      Activity or area: 
      <span
        className="sc-fqkvVR kjOclf"
      >
        Gym
      </span>
    </div>
  </div>
  <div
    className="sc-gEvEer HhquE"
  >
    <div
      className="sc-eqUAAy bZGZej"
    >
      Reason:
      <span
        className="sc-fqkvVR kjOclf"
      >
        Refused: Did not want to work
      </span>
    </div>
  </div>
  <div
    className="sc-gEvEer cNryjr"
  >
    <div
      className="sc-eqUAAy bZGZej"
    >
      Raised by: 
      <span
        className="sc-fqkvVR oHKyH"
      >
        A. Officer
      </span>
    </div>
    <div
      className="sc-eqUAAy bZGZej"
    >
      Date: 
      <span
        className="sc-fqkvVR oHKyH"
      >
        1 January 2019
      </span>
    </div>
  </div>
  <div
    className="sc-gEvEer cNryjr"
  >
    <div
      className="sc-eqUAAy bZGZej"
    >
      Issued by: 
      <span
        className="sc-fqkvVR oHKyH"
      />
    </div>
    <div
      className="sc-eqUAAy bZGZej"
    >
      Date: 
      <span
        className="sc-fqkvVR oHKyH"
      >
        1 January 2019
      </span>
    </div>
  </div>
</div>
`;

exports[`<IncentiveLevelSlip /> renders with an issued by name 1`] = `
<div
  className="sc-aXZVg hwQPcm"
>
  <div
    className="sc-gEvEer HhquE"
  >
    <div
      className="sc-eqUAAy bZGZej"
    >
      <h2
        className="heading__StyledHeading-sc-1sovo83-0 kheylK"
        size="MEDIUM"
      >
        Incentive Warning
      </h2>
    </div>
    <div
      className="sc-eqUAAy bZGZej"
    >
      Date and time: 
      <span
        className="sc-fqkvVR oHKyH"
      >
        1 January 2019, 12:00 am
      </span>
    </div>
  </div>
  <div
    className="sc-gEvEer HhquE"
  >
    <div
      className="sc-eqUAAy bZGZej"
    >
      Name: 
      <span
        className="sc-fqkvVR kjOclf"
      >
        An Offender
      </span>
    </div>
    <div
      className="sc-eqUAAy bZGZej"
    >
      Number: 
      <span
        className="sc-fqkvVR kjOclf"
      >
        ABC123
      </span>
    </div>
    <div
      className="sc-eqUAAy bZGZej"
    >
      Location: 
      <span
        className="sc-fqkvVR kjOclf"
      >
        LEI-123
      </span>
    </div>
    <div
      className="sc-eqUAAy bZGZej"
    >
      Activity or area: 
      <span
        className="sc-fqkvVR kjOclf"
      >
        Gym
      </span>
    </div>
  </div>
  <div
    className="sc-gEvEer HhquE"
  >
    <div
      className="sc-eqUAAy bZGZej"
    >
      Reason:
      <span
        className="sc-fqkvVR kjOclf"
      >
        Refused: Did not want to work
      </span>
    </div>
  </div>
  <div
    className="sc-gEvEer cNryjr"
  >
    <div
      className="sc-eqUAAy bZGZej"
    >
      Raised by: 
      <span
        className="sc-fqkvVR oHKyH"
      >
        A. Officer
      </span>
    </div>
    <div
      className="sc-eqUAAy bZGZej"
    >
      Date: 
      <span
        className="sc-fqkvVR oHKyH"
      >
        1 January 2019
      </span>
    </div>
  </div>
  <div
    className="sc-gEvEer cNryjr"
  >
    <div
      className="sc-eqUAAy bZGZej"
    >
      Issued by: 
      <span
        className="sc-fqkvVR oHKyH"
      >
        A. Officer
      </span>
    </div>
    <div
      className="sc-eqUAAy bZGZej"
    >
      Date: 
      <span
        className="sc-fqkvVR oHKyH"
      >
        1 January 2019
      </span>
    </div>
  </div>
</div>
`;
